Añadido header tienda online . Añadidos links en el tablero y sección páginas

--- a/announcement-list.html
+++ b/announcement-list.html
@@ -52,7 +52,7 @@
               </dt>
 
               <dt class="mb-2">
-                <a href="#" class="navegationLinks d-flex">
+                <a href="tasks-list.html" class="navegationLinks d-flex">
                   <div class="icons-wrap">
                     <i class="fas fa-thumbtack icon-tasks menu-icons"></i>
                   </div>
@@ -70,7 +70,7 @@
               </dt>
 
               <dt class="mb-2">
-                <a href="#" class="navegationLinks d-flex">
+                <a href="pages-list.html" class="navegationLinks d-flex">
                   <div class="icons-wrap">
                     <i class="fas fa-file fa-pages menu-icons"></i>
                   </div>
@@ -78,7 +78,7 @@
                 </a>
               </dt>
               <dt class="mb-2">
-                <a href="#" class="navegationLinks d-flex">
+                <a href="revisions-list.html" class="navegationLinks d-flex">
                   <div class="icons-wrap">
                     <i class="fas fa-search fa-revisions menu-icons"></i>
                   </div>
